# gym-pybullet-drones

./: package.xml  pyproject.bak.toml  setup.cfg  setup.py
gym_pybullet_drones/assets/: racer.urdf
gym_pybullet_drones/envs/: BaseAviary.py
gym_pybullet_drones/examples/: beta.py
