<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gym_pybullet_drones</name>
  <version>1.0.0</version>
  <description>PyBullet Gym environments for single and multi-agent reinforcement learning of quadcopter control</description>
  <maintainer email="jacopo.panerati@utoronto.ca">Jacopo Panerati</maintainer>
  <license>MIT</license>

  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-stable-baselines3-pip</depend>
  <depend>python3-pybullet-pip</depend>
  <depend>python3-gymnasium-pip</depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
